model general acabou?

--- a/melhor_grupo/data_processing.ipynb
+++ b/melhor_grupo/data_processing.ipynb
@@ -1035,7 +1035,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
+   "id": "b58034d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ship Mode</th>\n",
+       "      <th>Segment</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Market</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Profit</th>\n",
+       "      <th>Shipping_Cost</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Month_order</th>\n",
+       "      <th>Month_ship</th>\n",
+       "      <th>Day_order</th>\n",
+       "      <th>Day_ship</th>\n",
+       "      <th>pib_country</th>\n",
+       "      <th>Category LabelEnc</th>\n",
+       "      <th>Sub-Category LabelEnc</th>\n",
+       "      <th>Discount LabelEnc</th>\n",
+       "      <th>Ship_mode_binned</th>\n",
+       "      <th>Market_binned</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Row ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>32298</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>US</td>\n",
+       "      <td>East</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>762.1845</td>\n",
+       "      <td>933.57</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1.619700e+13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Canada and US</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Ship Mode   Segment           City     State        Country Market  \\\n",
+       "Row ID                                                                      \n",
+       "32298          1  Consumer  New York City  New York  United States     US   \n",
+       "\n",
+       "       Region  Quantity    Profit  Shipping_Cost  ...  Month_order  \\\n",
+       "Row ID                                            ...                \n",
+       "32298    East       7.0  762.1845         933.57  ...            7   \n",
+       "\n",
+       "        Month_ship  Day_order  Day_ship   pib_country  Category LabelEnc  \\\n",
+       "Row ID                                                                     \n",
+       "32298            7         31        31  1.619700e+13                  2   \n",
+       "\n",
+       "        Sub-Category LabelEnc  Discount LabelEnc  Ship_mode_binned  \\\n",
+       "Row ID                                                               \n",
+       "32298                       0                  0               1.0   \n",
+       "\n",
+       "        Market_binned  \n",
+       "Row ID                 \n",
+       "32298   Canada and US  \n",
+       "\n",
+       "[1 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ids_cols = ['Customer Name', 'Product ID LabelEnc', 'Costumer ID LabelEnc', 'Product Name', 'Order ID', 'Market' ]\n",
+    "\n",
+    "\n",
+    "for item in ids_cols: \n",
+    "    if item in df.columns:\n",
+    "        df = df.drop(item, axis=1)\n",
+    "\n",
+    "df.head(1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "a89c2cb9-2578-46cd-abba-d7572f82cd31",
    "metadata": {},
    "outputs": [],
