Árvores parece feito

--- a/melhor_grupo/data_processing.ipynb
+++ b/melhor_grupo/data_processing.ipynb
@@ -1036,7 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b58034d8",
+   "id": "21609a73",
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1179,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
+   "id": "3447bc77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# Label encoding de algumas variáveis\n",
+    "lb_make = LabelEncoder()\n",
+    "categorical_columns = df.select_dtypes(exclude=[\"number\",\"bool_\"]).columns\n",
+    "\n",
+    "for item in categorical_columns:\n",
+    "    df[item] = lb_make.fit_transform(df[item])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "a89c2cb9-2578-46cd-abba-d7572f82cd31",
    "metadata": {},
    "outputs": [],
