xgb falta testar

--- a/melhor_grupo/neural_network.ipynb
+++ b/melhor_grupo/neural_network.ipynb
@@ -84,13 +84,21 @@
     "\n",
     "\n",
     "scaler = StandardScaler()\n",
-    "scaler.fit(data)\n",
-    "df_scaled = scaler.transform(data)\n",
-    "print(scaled)\n",
+    "scaler.fit(df)\n",
+    "df = scaler.transform(df)\n",
     "\n",
-    "# for inverse transformation\n",
-    "inversed = scaler.inverse_transform(scaled)\n",
-    "print(inversed)\n"
+    "pt = PowerTransformer()\n",
+    "pt.fit(df)\n",
+    "\n",
+    "df = pt.transform(df)\n",
+    "\n",
+    "scaler = MinMaxScaler(feature_range = (0,1))\n",
+    "df = scaler.fit_transform(df)\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "'''"
    ]
   },
   {
