neurónios não normalizam

--- a/melhor_grupo/neural_network.ipynb
+++ b/melhor_grupo/neural_network.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataOriginal = pd.read_excel('Global_Superstore2.xlsx', index_col=0, comment='#') \n",
+    "dataOriginal = pd.read_csv('new_Global_Superstore2.csv', index_col=0, comment='#') \n",
     "df = dataOriginal "
    ]
   },
@@ -72,33 +72,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "8a318407",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-2.56909239 -0.86822074 -3.30504661 ... -0.59934891  1.22454555\n",
+      "  -0.31475317]\n",
+      " [-0.38104867  0.43683774  0.12487042 ... -0.59934891  1.22454555\n",
+      "  -1.41402756]\n",
+      " [-1.47507053 -0.86822074  0.12487042 ... -0.59934891  1.22454555\n",
+      "  -1.41402756]\n",
+      " ...\n",
+      " [ 0.71297319 -0.86822074  0.12487042 ...  3.04980699 -0.81662948\n",
+      "  -0.31475317]\n",
+      " [ 0.71297319  1.74189622  0.12487042 ... -0.59934891 -0.81662948\n",
+      "   1.33415841]\n",
+      " [-0.38104867 -0.86822074  0.12487042 ... -0.59934891  1.22454555\n",
+      "   1.33415841]]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.preprocessing import PowerTransformer\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "'''\n",
+    "Links:\n",
+    "https://stackoverflow.com/questions/44552031/sklearnstandardscaler-can-i-inverse-the-standardscaler-for-the-model-output\n",
+    "https://stackoverflow.com/questions/56936780/how-do-i-correctly-use-the-inverse-transform-method-when-using-powertransformer\n",
+    "'''\n",
     "\n",
     "\n",
+    "df = dataOriginal\n",
+    "cols = df.columns\n",
     "scaler = StandardScaler()\n",
-    "scaler.fit(df)\n",
-    "df = scaler.transform(df)\n",
+    "scaler.fit(df[cols])\n",
     "\n",
+    "df = scaler.transform(df[cols])\n",
+    "\n",
+    "'''\n",
     "pt = PowerTransformer()\n",
     "pt.fit(df)\n",
     "\n",
     "df = pt.transform(df)\n",
-    "\n",
     "scaler = MinMaxScaler(feature_range = (0,1))\n",
     "df = scaler.fit_transform(df)\n",
-    "\n",
     "'''\n",
-    "\n",
-    "\n",
-    "'''"
+    "print(df)\n"
    ]
   },
   {
@@ -111,62 +136,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "097cb478-22be-4c57-8dd2-ee4117930d46",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 51200 entries, 32298 to 6147\n",
-      "Data columns (total 26 columns):\n",
-      " #   Column          Non-Null Count  Dtype  \n",
-      "---  ------          --------------  -----  \n",
-      " 0   Order ID        51200 non-null  int32  \n",
-      " 1   Ship Mode       51200 non-null  int32  \n",
-      " 2   Customer ID     51200 non-null  int32  \n",
-      " 3   Customer Name   51200 non-null  int32  \n",
-      " 4   Segment         51200 non-null  int32  \n",
-      " 5   City            51200 non-null  int32  \n",
-      " 6   State           51200 non-null  int32  \n",
-      " 7   Country         51200 non-null  int32  \n",
-      " 8   Market          51200 non-null  int32  \n",
-      " 9   Region          51200 non-null  int32  \n",
-      " 10  Product ID      51200 non-null  int32  \n",
-      " 11  Category        51200 non-null  int32  \n",
-      " 12  Sub-Category    51200 non-null  int32  \n",
-      " 13  Product Name    51200 non-null  int32  \n",
-      " 14  Sales           51200 non-null  float64\n",
-      " 15  Quantity        51200 non-null  float64\n",
-      " 16  Discount        51200 non-null  int32  \n",
-      " 17  Profit          51200 non-null  float64\n",
-      " 18  Shipping_Cost   51200 non-null  float64\n",
-      " 19  Order_Priority  51200 non-null  int32  \n",
-      " 20  Year_order      51200 non-null  int64  \n",
-      " 21  Year_ship       51200 non-null  int64  \n",
-      " 22  Month_order     51200 non-null  int64  \n",
-      " 23  Month_ship      51200 non-null  int64  \n",
-      " 24  Day_order       51200 non-null  int64  \n",
-      " 25  Day_ship        51200 non-null  int64  \n",
-      "dtypes: float64(4), int32(16), int64(6)\n",
-      "memory usage: 7.4 MB\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#dataset_MLP = dataset.drop(columns=['Order ID', 'Customer ID', 'Customer Name', 'Product ID', 'Product Name', 'Postal Code'])\n",
-    "dataset_MLP = data2\n",
+    "dataset_MLP = df\n",
     "\n",
     "#dataset_MLP = dataset_MLP.drop(['Order Priority', 'Market', \"City\", \"Segment\", \"Ship Mode\", \"Ship Date\"], axis=1)\n",
-    "print(dataset_MLP.info())"
+    "#print(dataset_MLP.info())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "61a945d2-3161-4a80-aa10-251be0d9fbc9",
    "metadata": {},
    "outputs": [
@@ -196,10 +180,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "44b207a7-b669-48dd-aa67-ce269d8dd30f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'drop'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [18]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m X_MLP \u001b[38;5;241m=\u001b[39m \u001b[43mdataset_MLP\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdrop\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mProfit\u001b[39m\u001b[38;5;124m'\u001b[39m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      2\u001b[0m y_MLP \u001b[38;5;241m=\u001b[39m dataset_MLP[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mProfit\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n\u001b[0;32m      4\u001b[0m small_dataset \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'drop'"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
