--- a/competition/neural_network.ipynb
+++ b/competition/neural_network.ipynb
@@ -78,8 +78,8 @@
    },
    "outputs": [],
    "source": [
-    "TRAINING_DATASET_SOURCE = 'training_data.csv'\n",
-    "TEST_DATASET_SOURCE = 'test_data.csv'\n",
+    "TRAINING_DATASET_SOURCE = 'datasets/training_data.csv'\n",
+    "TEST_DATASET_SOURCE = 'datasets/test_data.csv'\n",
     "\n",
     "train_df = pd.read_csv(TRAINING_DATASET_SOURCE)\n",
     "test_df = pd.read_csv(TEST_DATASET_SOURCE)"
@@ -2889,24 +2889,6 @@
     "\n",
     "predictions_df.to_csv(\"submission.csv\", header=['Incidents'], index_label='RowId')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
