erro na escrita

--- a/melhor_grupo/data_exploration (1).ipynb
+++ b/melhor_grupo/data_exploration (1).ipynb
@@ -655,7 +655,7 @@
    "source": [
     "##### Conclusions from datafram description of numerical values:\n",
     "1. The column **Discount** is between 0 and 0.85, indicating it represents a percentage.\n",
-    "2. The column **Profit** represents an absolute value that can be negative. It has a very broad range of values.\n",
+    "2. The column **Profit** represents an nominal value that can be negative. It has a very broad range of values.\n",
     "3. The max quantity of items in each row is 14, yet the value in **Sales** has a very broad range, meaning the price of individual products is very diverse."
    ]
   },
