--- a/melhor_grupo/neural_network.ipynb
+++ b/melhor_grupo/neural_network.ipynb
@@ -135,20 +135,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "097cb478-22be-4c57-8dd2-ee4117930d46",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#dataset_MLP = dataset.drop(columns=['Order ID', 'Customer ID', 'Customer Name', 'Product ID', 'Product Name', 'Postal Code'])\n",
-    "\n",
-    "\n",
-    "#dataset_MLP = dataset_MLP.drop(['Order Priority', 'Market', \"City\", \"Segment\", \"Ship Mode\", \"Ship Date\"], axis=1)\n",
-    "#print(dataset_MLP.info())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "id": "61a945d2-3161-4a80-aa10-251be0d9fbc9",
    "metadata": {},
@@ -350,13 +336,7 @@
       "713/713 [==============================] - 2s 2ms/step - loss: 1.3222e-04 - mse: 1.3222e-04 - val_loss: 1.9088e-04 - val_mse: 1.9088e-04\n",
       "Epoch 9/15\n",
       "713/713 [==============================] - 2s 2ms/step - loss: 1.3109e-04 - mse: 1.3109e-04 - val_loss: 1.3444e-04 - val_mse: 1.3444e-04\n",
-      "Epoch 10/15\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 10/15\n",
       "713/713 [==============================] - 2s 2ms/step - loss: 1.3427e-04 - mse: 1.3427e-04 - val_loss: 2.1048e-04 - val_mse: 2.1048e-04\n",
       "Epoch 11/15\n",
       "713/713 [==============================] - 2s 2ms/step - loss: 1.3769e-04 - mse: 1.3769e-04 - val_loss: 1.2853e-04 - val_mse: 1.2853e-04\n",
@@ -594,13 +574,7 @@
       "891/891 [==============================] - 2s 2ms/step\n",
       "Epoch 1/15\n",
       "713/713 [==============================] - 3s 3ms/step - loss: 0.0042 - mse: 0.0042 - val_loss: 1.4441e-04 - val_mse: 1.4441e-04\n",
-      "Epoch 2/15\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 2/15\n",
       "713/713 [==============================] - 2s 2ms/step - loss: 1.5061e-04 - mse: 1.5061e-04 - val_loss: 1.4449e-04 - val_mse: 1.4449e-04\n",
       "Epoch 3/15\n",
       "713/713 [==============================] - 2s 3ms/step - loss: 1.5747e-04 - mse: 1.5747e-04 - val_loss: 2.6785e-04 - val_mse: 2.6785e-04\n",
@@ -831,13 +805,7 @@
       "713/713 [==============================] - 3s 4ms/step - loss: 1.2555e-04 - mse: 1.2555e-04 - val_loss: 8.9186e-05 - val_mse: 8.9186e-05\n",
       "Epoch 5/15\n",
       "713/713 [==============================] - 3s 4ms/step - loss: 1.1570e-04 - mse: 1.1570e-04 - val_loss: 8.0496e-05 - val_mse: 8.0496e-05\n",
-      "Epoch 6/15\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 6/15\n",
       "713/713 [==============================] - 2s 3ms/step - loss: 1.1111e-04 - mse: 1.1111e-04 - val_loss: 5.6283e-05 - val_mse: 5.6283e-05\n",
       "Epoch 7/15\n",
       "713/713 [==============================] - 2s 3ms/step - loss: 1.0931e-04 - mse: 1.0931e-04 - val_loss: 8.9278e-05 - val_mse: 8.9278e-05\n",
@@ -1068,13 +1036,7 @@
       "713/713 [==============================] - 2s 3ms/step - loss: 1.0530e-04 - mse: 1.0530e-04 - val_loss: 9.5885e-05 - val_mse: 9.5885e-05\n",
       "Epoch 9/15\n",
       "713/713 [==============================] - 2s 3ms/step - loss: 1.0692e-04 - mse: 1.0692e-04 - val_loss: 9.8524e-05 - val_mse: 9.8524e-05\n",
-      "Epoch 10/15\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 10/15\n",
       "713/713 [==============================] - 2s 2ms/step - loss: 1.0451e-04 - mse: 1.0451e-04 - val_loss: 1.4494e-04 - val_mse: 1.4494e-04\n",
       "Epoch 11/15\n",
       "713/713 [==============================] - 2s 2ms/step - loss: 1.0553e-04 - mse: 1.0553e-04 - val_loss: 1.0968e-04 - val_mse: 1.0968e-04\n",
@@ -1563,13 +1525,7 @@
       "713/713 [==============================] - 2s 2ms/step - loss: 0.3194 - mse: 0.3194 - val_loss: 0.3195 - val_mse: 0.3195\n",
       "Epoch 12/15\n",
       "713/713 [==============================] - 1s 2ms/step - loss: 0.3194 - mse: 0.3194 - val_loss: 0.3195 - val_mse: 0.3195\n",
-      "Epoch 13/15\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 13/15\n",
       "713/713 [==============================] - 1s 2ms/step - loss: 0.3194 - mse: 0.3194 - val_loss: 0.3195 - val_mse: 0.3195\n",
       "Epoch 14/15\n",
       "713/713 [==============================] - 1s 2ms/step - loss: 0.3194 - mse: 0.3194 - val_loss: 0.3195 - val_mse: 0.3195\n",
@@ -1811,13 +1767,7 @@
       "713/713 [==============================] - 1s 2ms/step - loss: 1.0690e-04 - mse: 1.0690e-04 - val_loss: 7.6642e-05 - val_mse: 7.6642e-05\n",
       "Epoch 6/15\n",
       "713/713 [==============================] - 2s 2ms/step - loss: 1.0623e-04 - mse: 1.0623e-04 - val_loss: 9.0625e-05 - val_mse: 9.0625e-05\n",
-      "Epoch 7/15\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 7/15\n",
       "713/713 [==============================] - 2s 2ms/step - loss: 9.9425e-05 - mse: 9.9425e-05 - val_loss: 6.7749e-05 - val_mse: 6.7749e-05\n",
       "Epoch 8/15\n",
       "713/713 [==============================] - 2s 3ms/step - loss: 9.8878e-05 - mse: 9.8878e-05 - val_loss: 5.9745e-05 - val_mse: 5.9745e-05\n",
@@ -2056,13 +2006,7 @@
       "713/713 [==============================] - 2s 3ms/step - loss: 1.1198e-04 - mse: 1.1198e-04 - val_loss: 1.0900e-04 - val_mse: 1.0900e-04\n",
       "Epoch 14/15\n",
       "713/713 [==============================] - 2s 3ms/step - loss: 1.1545e-04 - mse: 1.1545e-04 - val_loss: 9.6379e-05 - val_mse: 9.6379e-05\n",
-      "Epoch 15/15\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 15/15\n",
       "713/713 [==============================] - 3s 4ms/step - loss: 1.1894e-04 - mse: 1.1894e-04 - val_loss: 2.2758e-04 - val_mse: 2.2758e-04\n",
       "891/891 [==============================] - 2s 2ms/step\n",
       "Epoch 1/15\n",
