limpar um bocado

--- a/melhor_grupo/decision_tree.ipynb
+++ b/melhor_grupo/decision_tree.ipynb
@@ -63,91 +63,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "35b4527d-cba4-4178-b230-e676d65f27a0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        Ship Mode  Segment  City  State  Country  Region  Category  \\\n",
-      "Row ID                                                               \n",
-      "32298           0        0     1      5       23       5         2   \n",
-      "26341           2        1     2      4        0       8         0   \n",
-      "25330           1        0     2      9        0       8         2   \n",
-      "13524           1        2     2      7        7       2         2   \n",
-      "47221           0        0     2      7       18       0         2   \n",
-      "...           ...      ...   ...    ...      ...     ...       ...   \n",
-      "24175           3        2     2      9        0       8         1   \n",
-      "29002           0        1     2      7       18       7         1   \n",
-      "35398           3        0     2     11       23       2         1   \n",
-      "9596            3        2     2      7        1      10         1   \n",
-      "6147            2        0     2      7       16       2         1   \n",
-      "\n",
-      "        Sub-Category     Sales  Quantity  ...  order_day  order_month  \\\n",
-      "Row ID                                    ...                           \n",
-      "32298              0  2309.650       7.0  ...         31            7   \n",
-      "26341              5  3709.395       9.0  ...          5            2   \n",
-      "25330             13  5175.171       9.0  ...         17           10   \n",
-      "13524             13  2892.510       5.0  ...         28            1   \n",
-      "47221              6  2832.960       8.0  ...          5           11   \n",
-      "...              ...       ...       ...  ...        ...          ...   \n",
-      "24175              3    58.050       5.0  ...          5            8   \n",
-      "29002              8    65.100       5.0  ...         19            6   \n",
-      "35398              1     0.444       1.0  ...         20            6   \n",
-      "9596               3    13.440       2.0  ...         18            2   \n",
-      "6147              12    61.380       3.0  ...         22            5   \n",
-      "\n",
-      "        order_year  ship_year  ship_month  ship_day  discount_bracket  \\\n",
-      "Row ID                                                                  \n",
-      "32298         2012       2012           7        31                 0   \n",
-      "26341         2013       2013           2         7                 0   \n",
-      "25330         2013       2013          10        18                 0   \n",
-      "13524         2013       2013           1        30                 0   \n",
-      "47221         2013       2013          11         6                 0   \n",
-      "...            ...        ...         ...       ...               ...   \n",
-      "24175         2014       2014           8        10                 0   \n",
-      "29002         2014       2014           6        19                 0   \n",
-      "35398         2014       2014           6        24                 3   \n",
-      "9596          2012       2012           2        22                 0   \n",
-      "6147          2012       2012           5        26                 0   \n",
-      "\n",
-      "         pib_country  ship_mode_binned  Market_binned  \n",
-      "Row ID                                                 \n",
-      "32298   1.619700e+13               1.0              2  \n",
-      "26341   1.576340e+12               1.0              0  \n",
-      "25330   1.576340e+12               1.0              0  \n",
-      "13524   3.732740e+12               1.0              4  \n",
-      "47221   8.747774e+09               1.0              1  \n",
-      "...              ...               ...            ...  \n",
-      "24175   1.467500e+12               0.0              0  \n",
-      "29002   9.297231e+09               1.0              0  \n",
-      "35398   1.752720e+13               0.0              2  \n",
-      "9596    2.465230e+12               0.0              5  \n",
-      "6147    1.053201e+10               1.0              5  \n",
-      "\n",
-      "[51200 rows x 24 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "print(df)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "4c284a5d-b90a-4826-9d25-6710efbd0fe2",
    "metadata": {},
    "source": [
-    "# Modelação\n",
     "\n",
-    "## Modelo de Árvore de decisão\n",
-    "\n",
-    "Para utilizarmos árvores de decisão, temos de converter os dados com \"string\" para numéricos. \n",
-    "E removemos colunas que não consideramos importantes."
+    "# Modelo de Árvore de decisão\n"
    ]
   },
   {
@@ -169,7 +90,7 @@
     "X = dataset.drop(['Profit'],axis=1)\n",
     "y = dataset['Profit']\n",
     "\n",
-    "small_dataset = True\n",
+    "small_dataset = False\n",
     "if small_dataset: \n",
     "    remove_n = 20000\n",
     "    drop_indices = np.random.choice(dataset.index, remove_n, replace=False)\n",
