--- a/melhor_grupo/neural_network.ipynb
+++ b/melhor_grupo/neural_network.ipynb
@@ -2183,8 +2183,7 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_MLP, y_MLP, test_size=0.2, random_state=RANDOM_SEED)\n",
     "\n",
-    "number_columns = len(X_train.columns)#.count()\n",
-    "#print(\"Número de colunas: \", number_columns)\n",
+    "number_columns = len(X_train.columns)\n",
     "\n",
     "def build_model(activation='relu', learning_rate=0.01, hidden_neurons = 6):\n",
     "#create a sequential model (with three Layers - Last one is the output)\n",
@@ -2226,6 +2225,15 @@
     "print(grid_search)\n",
     "#print(\"\\n The best score across ALL searched params:\\n\",grid_search.best_score_)\n",
     "#print(\"\\n The best parameters across ALL searched params:\\n\",grid_search.best_params_)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7df0dca7",
+   "metadata": {},
+   "source": [
+    "### Análise de overfitting\n",
+    "\n"
    ]
   },
   {
@@ -2283,17 +2291,6 @@
     "best_mlp_model.fit(X_train, y_train, epochs=25,\n",
     "validation_data=(X_test, y_test),\n",
     "callbacks=[PlotLossesKerasTF()], verbose=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7df0dca7",
-   "metadata": {},
-   "source": [
-    "### Análise de overfitting\n",
-    "\n",
-    "Pelos gráficos, vemos que o medium average error (mae) dá bastante mal, mas o mse dá bem. Como 20 epochs é um valor considerável, consideramos nesta fase melhorar o tratamento de dados, e depois verificar se há melhorias. \n",
-    "Isto porque, o tratamento de dados atual para este modelo é quase com o objetivo de o modelo consiguir analisar o dataset."
    ]
   },
   {
@@ -2412,6 +2409,14 @@
     "\n",
     "#plt.scatter(y_test,predictions)\n",
     "#plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8916b146",
+   "metadata": {},
+   "source": [
+    "### Análise dos resultados\n"
    ]
   },
   {
